# psion-org-datapack-tool

./: README.md
firmware/:  *Minibuf-2*  CMakeLists.txt  datapack_tool.c  datapack_tool_newer.c  datapack_tool_older.c  embed_rom_in_picocode.tcl  flash_code.sh  set_debug_openocd.sh
firmware/oldbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  datapack_tool.dis  datapack_tool.elf  datapack_tool.elf.map  datapack_tool.hex  datapack_tool.uf2  org1_datapack.txt
firmware/oldbuild/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
firmware/oldbuild/elf2uf2/boot_uf2_headers/: Makefile
firmware/oldbuild/pico-sdk/: Makefile  cmake_install.cmake
firmware/oldbuild/pico-sdk/docs/: Makefile
firmware/oldbuild/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/oldbuild/pico-sdk/src/common/: Makefile  cmake_install.cmake
firmware/oldbuild/pico-sdk/src/common/boot_picoboot/: Makefile
firmware/oldbuild/pico-sdk/src/common/boot_uf2/: Makefile
firmware/oldbuild/pico-sdk/src/common/pico_base/: Makefile
firmware/oldbuild/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
firmware/oldbuild/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
firmware/oldbuild/pico-sdk/tools/: Makefile
firmware/oldbuild/pico_extras/: Makefile
firmware/oldbuild/pico_extras/src/: Makefile  cmake_install.cmake
firmware/oldbuild/pico_extras/src/common/: Makefile  cmake_install.cmake
firmware/oldbuild/pico_extras/src/rp2_common/: Makefile  cmake_install.cmake
firmware/oldbuild/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
pack-images/: PAK0000.OPK  (+5 more)
(+118 files in other folders)
